--- a/src/styles/jsteditor.less
+++ b/src/styles/jsteditor.less
@@ -66,15 +66,18 @@
 
       textarea {
         width: 100%;
-        height: 100%;
+        overflow: hidden; 
+        // height: 100%;
+        min-height: 75px;
         padding: 15px;
         box-sizing: border-box;
         font-size: 14px;
         line-height: 1.6em;
+        background: var(--aie-bg-color);
+        color: var(--aie-text-color);
         font-family: Arial, 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
         border: none;
         resize: none;
-
       }
 
       textarea:focus-visible {
@@ -178,7 +181,7 @@
       font-weight: 600;
       font-size: 14px;
       padding: 0 20px;
-      color: #666;
+      color: var(--aie-text-color);
       text-decoration: none;
       font-family: Arial, 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
     }
@@ -323,6 +326,7 @@
       height: 20px;
       margin: 3px;
       padding: 5px;
+      color: var(--aie-text-color);
       cursor: pointer;
 
       svg {
