--- a/src/styles/jsteditor.less
+++ b/src/styles/jsteditor.less
@@ -289,7 +289,7 @@
       background: var(--aie-ai-panel-bg-color);
 
       .item {
-        display: block;
+        display: flex;
         height: 20px;
         width: 150px;
         margin: 0;
@@ -299,6 +299,14 @@
         text-align: left;
         padding: 10px 20px;
         cursor: pointer;
+        align-items: center;
+
+        img {
+          height: 20px;
+          width: 20px;
+          margin-right: 6px;
+          border-radius: 50%;
+        }
       }
 
       .item-selected {
